--- a/gameapp/templates/base.html
+++ b/gameapp/templates/base.html
@@ -12,6 +12,23 @@
     <canvas id="lolcanvas" width="150" height="150" style="position:absolute;z-index:-100;top:0;left:0;width:100%;height:100%"></canvas>
     <div class="container">
         <img class="game-logo" src="/static/img/gamelogo.png">
+        {% if user.is_authenticated %}
+        Hello, {{user}}!
+
+        <form action="/logout/" method="post">
+            {% csrf_token %}
+            <input type="submit" value="Logout" />
+        </form>
+        {% else %}
+        Hello!
+        <form action="/login/" method="get">
+            <input type="submit" value="Login" />
+        </form>
+        <form action="/register/" method="get">
+            <input type="submit" value="Register" />
+        </form>
+        {% endif %}
+
         {% block content %}{% endblock %}
         <div class="row bottom-links hacker">
             <div class="col-md-12">
