--- a/gameapp/templates/home.html
+++ b/gameapp/templates/home.html
@@ -1,20 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if user.is_authenticated %}
-    Hello, {{user}}!
-
-    <form action="/logout/" method="post">
-        {% csrf_token %}
-        <input type="submit" value="Logout" />
-    </form>
-    {% else %}
-    Hello!
-    <form action="/login/" method="get">
-        <input type="submit" value="Login" />
-    </form>
-    <form action="/register/" method="get">
-        <input type="submit" value="Register" />
-    </form>
-    {% endif %}
+Welcome to The HackUPC game!<br>
+Login or register to start!
 {% endblock %}
