--- a/gameapp/static/sass/main.scss
+++ b/gameapp/static/sass/main.scss
@@ -17,16 +17,17 @@ $blink: #75ACDB;
 $bgray: #666;
 $bwhite: #FFF;
 
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    margin-top: 20px;
+}
+
 label {
     position: relative;
     top: 10px;
     margin-right: 10px;
-}
-
-.head-logo img {
-    @include center-block();
-    width: 55%;
-    margin-top: 20vh;
 }
 
 img.game-logo {
@@ -74,9 +75,6 @@ img.game-logo {
 body.hacker {
     background: black;
     color: $hlight;
-    h1 {
-        color: $hlight;
-    }
     input {
         &[type="text"] {
             text-indent: 6px;
@@ -90,146 +88,17 @@ body.hacker {
     }
 }
 
-.top-buttons, .bottom-buttons {
-    >div {
-        text-align: center;
-    }
-    .button-container {
-        display: inline-block;
-        a {
-            &:first-child {
-                margin-right: 15px;
-            }
-            &:hover {
-                background-color: #9D9FF9;
-                border-bottom-width: 6px;
-                position: relative;
-                top: 4px;
-            }
-            display: inline-block;
-            text-decoration: none;
-            background-color: $blight;
-            color: $bwhite;
-            width: 160px;
-            padding: 15px 0px 10px;
-            font-weight: 500;
-            font-size: 1.4em;
-            border: none;
-            border-bottom: 10px solid $bdark;
-        }
-    }
-}
-
-.top-buttons .button-container {
-    margin-top: 8vh;
-}
-
-.top-description p, .bottom-description p, .coming-soon p {
-    @include center-block();
-    color: $blight;
-    font-size: 1.3em;
-    line-height: 1.9em;
-    text-align: center;
-}
-
-.top-description p {
-    margin-top: 10vh;
-}
-
-.coming-soon p {
-    color: $bgray;
-    font-size: 2.2em;
-}
-
 h1 {
-    color: $blight;
+    color: $hlight;
     margin-top: 10vh;
     font-size: 3.5em;
     margin-bottom: 5vh;
-}
-
-.faq-questions {
-    &:not(:first-of-type) {
-        margin-top: 10vh;
-    }
-    .title {
-        font-size: 1.6em;
-        color: $blight;
-        margin-bottom: 30px;
-    }
-    .answer {
-        font-size: 1.15em;
-        line-height: 2em;
-        color: $bgray;
-    }
-    .question {
-        margin-bottom: 5vh;
-    }
-    a {
-        color: $blink;
-        text-decoration: none;
-    }
-}
-
-.sponsor-images {
-    text-align: center;
-    img {
-        &.mr {
-            margin-right: 20px;
-        }
-        &.ml {
-            margin-left: 20px;
-        }
-        &.tera {
-            width: 60%
-        }
-        &.giga {
-            width: 38%
-        }
-        &.mega {
-            width: 25%;
-        }
-        &.mili {
-            width: 20%;
-        }
-    }
-    .separator {
-        height: 5vh;
-    }
 }
 
 @media(max-width: 600px) {
     .head-logo img {
         width: 85%;
     }
-    .button-container a {
-        display: block;
-        margin-bottom: 10px;
-        margin-right: 0!important;
-    }
-}
-
-.partners {
-    text-align: center;
-    .partner {
-        width: 12%;
-        margin: 0px 20px;
-    }
-    margin-bottom: 10vh;
-}
-
-#promo-video {
-    max-width: 700px;
-    width: 100%;
-    height: 400px;
-}
-
-.bottom-buttons {
-    margin-top: 3vh;
-}
-
-.bottom-description {
-    margin-top: 7vh;
 }
 
 .bottom-links {
@@ -241,10 +110,7 @@ h1 {
     }
     padding-bottom: 10vh;
     a {
-        &.hacker {
-            color: $hlight;
-        }
-        color: $blight;
+        color: $hlight;
         text-decoration: none;
         padding: 0.4em;
     }
