--- a/gameapp/templates/base.html
+++ b/gameapp/templates/base.html
@@ -12,7 +12,6 @@
     <canvas id="lolcanvas" width="150" height="150" style="position:absolute;z-index:-100;top:0;left:0;width:100%;height:100%"></canvas>
     <div class="container">
         <a href="/"><img class="game-logo" src="/static/img/gamelogo.png"></a>
-        <a href="/ranking/">Ranking</a>
         {% if user.is_authenticated %}
         Hello, {{user}}!
 
@@ -21,16 +20,19 @@
             <input type="submit" value="Logout" />
         </form>
         {% else %}
-        Hello!
-        <form action="/login/" method="get">
-            <input type="submit" value="Login" />
-        </form>
-        <form action="/register/" method="get">
-            <input type="submit" value="Register" />
-        </form>
+        Hello, Anon!
+	<div class="top-forms">
+            <form class="login-form-button" action="/login/" method="get">
+                <input type="submit" value="Login" />
+            </form>
+            <form class="register-form-button" action="/register/" method="get">
+                <input type="submit" value="Register" />
+            </form>
+        </div>
         {% endif %}
 
         {% block content %}{% endblock %}
+	<div class="ranking-link"><a href="/ranking/">Ranking</a></div>
         <div class="row bottom-links hacker">
             <div class="col-md-12">
                 <a class="fa fa-3x fa-envelope hacker" href="mailto:info@hackersatupc.org"></a>
