--- a/gameapp/templates/base.html
+++ b/gameapp/templates/base.html
@@ -11,7 +11,8 @@
 <body class="hacker">
     <canvas id="lolcanvas" width="150" height="150" style="position:absolute;z-index:-100;top:0;left:0;width:100%;height:100%"></canvas>
     <div class="container">
-        <img class="game-logo" src="/static/img/gamelogo.png">
+        <a href="/"><img class="game-logo" src="/static/img/gamelogo.png"></a>
+        <a href="/ranking/">Ranking</a>
         {% if user.is_authenticated %}
         Hello, {{user}}!
 
