Added some challenges. There may be more incoming!

--- a/gameapp/templates/levels/3.html
+++ b/gameapp/templates/levels/3.html
@@ -1,4 +1,5 @@
-password is blabla
+<h1>Weak die fast</h1>
 
-<br>
-muajaja
+<p>
+  Take <a href='/static/files/weak-die-fast'>this</a>. Get the password.
+</p>
