--- a/gameapp/templates/congrats.html
+++ b/gameapp/templates/congrats.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-You finished this shit! congrats
+<h1>Congratulations!</h1>
+<p>You just finished the game! (and lost again :)</p>
 {% endblock %}
