Added "table" classname to ranking table, so that there is spacing and separators

--- a/gameapp/templates/ranking.html
+++ b/gameapp/templates/ranking.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Ranking</h1>
 
-    <table>
+    <table class="table">
         <tr>
             <th>User</th>
             <th>Level</th>
