Fixed small mistakes in statements etc.

--- a/gameapp/templates/levels/1.html
+++ b/gameapp/templates/levels/1.html
@@ -1,3 +1,6 @@
-<h1>Too many files</h1>
+<h1>Messy folders</h1>
 
-Find the password.
+<p>
+  Take <b><a href='/static/files/messy-folders.zip'>this</a></b>. Find the password.
+</p>
+
