--- a/gameapp/templates/levels/8.html
+++ b/gameapp/templates/levels/8.html
@@ -1,5 +1,5 @@
 <h1>Name the sequence</h1>
 
-<audio>
+<audio controls autoplay>
   <source type='audio/mpeg' src='/static/files/name-the-sequence.mp3'></source>
 </audio>
