--- a/gameapp/templates/levels/3.html
+++ b/gameapp/templates/levels/3.html
@@ -1,5 +1,9 @@
-<h1>Weak die fast</h1>
+<h1>XOR</h1>
 
 <p>
-  Take <a href='/static/files/weak-die-fast'>this</a>. Get the password.
+  Somebody did the XOR of all numbers from 0 to 1000000000 (inclusive), except one number K. Find this K.
 </p>
+<h3>Input</h3>
+<pre>
+1013467993
+</pre>
