--- a/gameapp/templates/levels/7.html
+++ b/gameapp/templates/levels/7.html
@@ -1,5 +1,5 @@
-<h1>Counting bits</h1>
+<h1>Add them all!</h1>
 
 <p>
-  What's the total number of bits with value 1 in all numbers in the range [1337, 1333333333333337]?
+Take <a href='/static/files/add-them-all.zip'><b>this</b></a>.
 </p>
