--- a/gameapp/templates/levels/8.html
+++ b/gameapp/templates/levels/8.html
@@ -1,5 +1,5 @@
-<h1>Name the sequence</h1>
+<h1>Counting bits</h1>
 
-<audio controls autoplay>
-  <source type='audio/mpeg' src='/static/files/name-the-sequence.mp3'></source>
-</audio>
+<p>
+  What's the total number of bits with value 1 in all numbers in the range [1337, 1333333333333337]?
+</p>
