--- a/gameapp/templates/levels/10.html
+++ b/gameapp/templates/levels/10.html
@@ -1,5 +1,9 @@
-<h1>Name the sequence</h1>
+<h1>XOR Part 2</h1>
 
-<audio controls autoplay>
-  <source type='audio/mpeg' src='/static/files/name-the-sequence.mp3'></source>
-</audio>
+<p>
+  Somebody did the XOR of all numbers from 0 to 1152921504606847076 (inclusive), except one number K. Find this K.
+</p>
+<h3>Input</h3>
+<pre>
+1286634875943980746
+</pre>
