--- a/gameapp/templates/levels/4.html
+++ b/gameapp/templates/levels/4.html
@@ -1,5 +1,3 @@
-<h1>Weak die fast</h1>
-
-<p>
-  Take <a href='/static/files/weak-die-fast'>this</a>. Get the password.
-</p>
+<h1>TAR</h1>
+<img src='/static/img/tar.png'>
+<p>Take <a href='/static/files/input.tar'><b>this</b></a>. Get the password.</p>
