--- a/gameapp/templates/levels/5.html
+++ b/gameapp/templates/levels/5.html
@@ -1,9 +1,5 @@
-<h1>Colors!</h1>
-<p>
-  <img src='/static/img/colors.png'>
-</p>
+<h1>Weak die fast</h1>
 
 <p>
-  Get the password.
+  Take <a href='/static/files/weak-die-fast'>this</a>. Get the password.
 </p>
-
