--- a/gameapp/templates/levels/9.html
+++ b/gameapp/templates/levels/9.html
@@ -1,9 +1,5 @@
-<h1>XOR Part 2</h1>
+<h1>Counting bits</h1>
 
 <p>
-  Somebody did the XOR of all numbers from 0 to 1152921504606847076 (inclusive), except one number K. Find this K.
+  What's the total number of bits with value 1 in all numbers in the range [1337, 1333333333333337]?
 </p>
-<h3>Input</h3>
-<pre>
-1286634875943980746
-</pre>
