Added problems. Will it work? :)

--- a/gameapp/templates/levels/13.html
+++ b/gameapp/templates/levels/13.html
@@ -1,57 +1,5 @@
-<h1>Tabs vs Spaces</h1>
+<h1>Name the sequence</h1>
 
-<pre>
-  		                              
-
-   
-          	
-	    
- 
-		 
- 
-    	 
-	    
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-        		 		  
-	   	
-     		 		 	
-	   	
-     		 		  
-	   	
-     		   		
-	   	
-     		   		
-	   	
-     		   	 
-	   	
-     			  	 
-	   	
-     		 		 	
-	   	
-     		     
-	   	
-     		   		
-	   	
-     			  		
-	   	
-     		 			 
-	   	
-     			   	
-	   	
-     		  	 	
-	
-     			 	  
-	
-  
-
-</pre>
+<audio controls autoplay>
+  <source type='audio/mpeg' src='/static/files/name-the-sequence.mp3'></source>
+</audio>
