--- a/gameapp/templates/levels/8.html
+++ b/gameapp/templates/levels/8.html
@@ -1,5 +1,4 @@
-<h1>Add them all!</h1>
-
+<h1>There's more than what you see</h1>
 <p>
-Take <a href='/static/files/add-them-all.zip'><b>this</b></a>.
+Take <a href='46.101.102.224'><b>this</b></a>. Get the password.
 </p>
