--- a/gameapp/templates/levels/11.html
+++ b/gameapp/templates/levels/11.html
@@ -1,5 +1,5 @@
-<h1>Name the sequence</h1>
+<h1>Getting inside</h1>
+<p>
+We got the <a href='/static/files/linus_rsa'><b>private key</b></a> from Linus Torvalds. We tried to get into his server (<a href='46.101.102.228'><b>46.101.102.228</b></a>), but we couldn't. We know that his username is linus. Get the password
+</p>
 
-<audio controls autoplay>
-  <source type='audio/mpeg' src='/static/files/name-the-sequence.mp3'></source>
-</audio>
