--- a/gameapp/templates/levels/8.html
+++ b/gameapp/templates/levels/8.html
@@ -1,4 +1,4 @@
 <h1>There's more than what you see</h1>
 <p>
-Take <a href='46.101.102.224'><b>this</b></a>. Get the password.
+Take <a href='http://46.101.102.224'><b>this</b></a>. Get the password.
 </p>
